Feat: 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="Icon.svg" />
+    <link rel="shortcut icon" href="Icon.svg" />
+    <link rel="apple-touch-icon" href="Icon.svg" />
+    <link rel="apple-touch-icon-precomposed" href="Icon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buddle</title>
   </head>
